src/test/ui/issues/issue-XXXX/issue-3680.stderr
error[E0308]: mismatched types
  --> $DIR/issue-3680.rs:3:9
   |
LL |         Err(_) => ()
   |         ^^^^^^ expected enum `Option`, found enum `Result`
   |
   = note: expected enum `Option<_>`
              found enum `Result<_, _>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
